# Portfolio

./: CNAME  README.md  _config.yml  header.html  index.html  package-lock.json  package.json  portfolio.jsx  style.css  vite.config.js
Avansert - Rust Haskell/: README.md
Avansert - Rust Haskell/Assignment1/: GoGame.cabal  README.md
Avansert - Rust Haskell/Assignment1/app/: Main.hs
Avansert - Rust Haskell/Assignment1/src/: Lib.hs
Avansert - Rust Haskell/Assignment1/test/: Spec.hs
Avansert - Rust Haskell/Assignment2/: README.md
Avansert - Rust Haskell/Assignment2/src/: arithemetics.rs  functions.rs  length.rs  main.rs  stack_operations.rs
Avansert - Rust Haskell/Assignments/Assignment1/: CHANGELOG.md  package.yaml
Avansert - Rust Haskell/Documentation/: Report.md
Avansert - Rust Haskell/Labs/Lab1/: Lab1.md  fizzBuzz.hs  formattedTable.hs  helloName.hs  readNum.hs  table.hs
Avansert - Rust Haskell/Labs/Lab2/: Lab2.md  formattedTableButBetter.hs  step21.hs  step22.hs  step23.hs  step24.hs  step25.hs  variant211.hs
Avansert - Rust Haskell/Labs/Lab3/: Lab3.md  Step323.hs  step31.hs
Avansert - Rust Haskell/Labs/Lab4/: GoGame.hs  Lab4.md
Avansert - Rust Haskell/Labs/Lab5/: Lab5.md
Avansert - Rust Haskell/Labs/Lab6/: GoGame.cabal  Lab6.md
Avansert - Rust Haskell/Labs/OtherStuff/: OtherStuff.md  test.hs  test2.hs  time.hs
Bachelor - Full stack/: README.md
Bachelor - Full stack/innoveria-bachelor-main/: .gitignore  .gitlab-ci.yml  CODEC.md  README.md  Set-up-guide.md  docker-compose-1.yaml  docker-compose.yaml  package-lock.json
Bachelor - Full stack/innoveria-bachelor-main/Backend/: commands.sql
Cloud - GO API/assignment-1-main/: README.md  main.go
Cloud - GO API/assignment-1-main/unisearcher/: constants.go  default.go  getApi.go  struct.go
Cloud - GO API/assignment-2-main/: Dockerfile  README.md  go.mod
Cloud - GO API/assignment-2-main/cmd/: main.go
Cloud - GO API/assignment-2-main/handler/: currentHandler.go  defaultHandler.go  historyHandler.go  notificationHandler.go  statusHandler.go
Cloud - GO API/assignment-2-main/helper/: const.go  functions.go  structs.go
Cloud - GO API/assignment-2-main/test/: function_test.go  server_test.go
Database/Project/: project.sql
Database/Project/PythonAPI/: datatest.py
Database/RestOfTheCourseWork/: assignment3.sql  assignment4.py
Gameprog - c# Unity/TheCodeOfGame/: .gitignore  README.md  gameprog.md
Gameprog - c# Unity/TheCodeOfGame/2D_Acrobatic_Ball/: .gitignore  UpgradeLog.htm
Gameprog - c# Unity/TheCodeOfGame/Reports/: Daniel.md  HaraldAndreas.md  NilsPetter.md  Odin.md
Grafikk - C# OpenGL/group_15-devel/group_15-devel/: .gitignore  .gitmodules  CMakeLists.txt
Grafikk - C# OpenGL/group_15-devel/group_15-devel/exam/: exam.cpp  main.cpp
Grafikk - C# OpenGL/group_15-devel/group_15-devel/framework/GLFWApplication/: GLFWApplication.cpp  GLFWApplication.h
Grafikk - C# OpenGL/group_15-devel/group_15-devel/framework/GeometricTools/: GeometricTools.cpp  GeometricTools.h
Grafikk - C# OpenGL/group_15-devel/group_15-devel/framework/Rendering/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  RenderCommands.h  TextureManager.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Grafikk - C# OpenGL/group_15-devel/group_15-devel/framework/Rendering/Camera/: OrthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h
Grafikk - C# OpenGL/group_15-devel/group_15-devel/framework/Shaders/: Shaders.cpp  Shaders.h
Grafikk - C++ OpenGL/assignment/: .gitmodules  CMakeLists.txt  README.md
Grafikk - C++ OpenGL/assignment/assignment/: CMakeLists.txt  assignment.cpp  assignment.h  main.cpp
Grafikk - C++ OpenGL/assignment/assignment/resources/shaders/: chess.h  unit.h
Grafikk - C++ OpenGL/assignment/framework/Rendering/: CMakeLists.txt  RenderCommands.h
Grafikk - C++ OpenGL/assignment/framework/Rendering/Camera/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp
Grafikk - C++ OpenGL/assignment/framework/Rendering/Shader/: Shader.cpp  Shader.h  ShaderDataTypes.h
Grafikk - C++ OpenGL/assignment/framework/Rendering/Texture/: TextureManager.cpp  TextureManager.h
Grafikk - C++ OpenGL/assignment/framework/Rendering/Vertex/: BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Grafikk - C++ OpenGL/assignment/labs/lab1/: CMakeLists.txt  main.cpp
Grafikk - C++ OpenGL/assignment/labs/lab1/shaders/: triangle.h
Grafikk - C++ OpenGL/assignment/labs/lab2/: CMakeLists.txt  lab2.cpp  lab2.h  main.cpp
Grafikk - C++ OpenGL/assignment/labs/lab2/shaders/: ChessShader.h
Grafikk - C++ OpenGL/assignment/labs/lab3/: CMakeLists.txt  lab3.cpp  lab3.h  main.cpp
Grafikk - C++ OpenGL/assignment/labs/lab3/shaders/: ChessShader.h  CubeShader.h
Grafikk - C++ OpenGL/assignment/labs/lab5/: CMakeLists.txt  lab5.cpp  lab5.h  main.cpp
Grafikk - C++ OpenGL/assignment/labs/lab5/shaders/: ChessShader.h  CubeShader.h
Grafikk - C++ OpenGL/group_15-devel/group_15-devel/exam/: CMakeLists.txt  exam.h
Grafikk - C++ OpenGL/group_15-devel/group_15-devel/exam/shaders/: exam_shader.h
Intergrasjon - Full stack/fridgeio-main/: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  package-lock.json
Intergrasjon - Full stack/fridgeio-main/API/: cmd.go  (+5 more)
Kunstliginteligens/Assignment1/: 1.1 REGRESSION TASK.ipynb  1.2 REGRESSION TASK.ipynb
Kunstliginteligens/Assignment2/: Ass2w12.ipynb  Ass2w3.ipynb  Ass2w4.ipynb  Ass2w5.ipynb
Kunstliginteligens/Assignment3/: Ass3w13.ipynb  Ass3w2.ipynb
Kunstliginteligens/Assignment4/: Ass4w11.ipynb  Ass4w12.ipynb  Ass4w2.ipynb
PortfolioWebsite/: about.html  ai.html  avansert.html  bachelor.html  cloud.html  database.html  dots.js  footer.html  game.html  graphic.html  header&footer.js  header.html  index.html  intergrasjon.html  mobile.html  style.css  template.html
Webtech - Html, css and javascript/: README.md
src/: App.jsx  about.jsx  footer.jsx  header.jsx  main.jsx
src/components/: CircularText.css  InterestsSection.jsx  ProjectCard.css  ProjectCard.jsx  RotatingText.css
(+731 files in other folders)
